export const snapshot = {};

snapshot[`captureMessage 1`] = `
{
  breadcrumbs: [
    {
      category: "sentry.event",
      event_id: "{{id}}",
      level: "error",
      message: "Error: Some unhandled error",
      timestamp: 0,
    },
  ],
  contexts: {
    app: {
      app_start_time: "{{time}}",
    },
    device: {
      arch: "{{arch}}",
      processor_count: 0,
    },
    os: {
      name: "{{platform}}",
      version: "{{version}}",
    },
    runtime: {
      name: "deno",
      version: "{{version}}",
    },
    trace: {
      span_id: "{{id}}",
      trace_id: "{{id}}",
    },
    typescript: {
      name: "TypeScript",
      version: "{{version}}",
    },
    v8: {
      name: "v8",
      version: "{{version}}",
    },
  },
  environment: "production",
  event_id: "{{id}}",
  level: "info",
  message: "Some error message",
  platform: "javascript",
  sdk: {
    integrations: [
      "EventFilters",
      "RequestData",
      "FunctionToString",
      "LinkedErrors",
      "Dedupe",
      "Breadcrumbs",
      "DenoContext",
      "DenoServe",
      "DenoHttp",
      "DenoRedis",
      "Graphql",
      "VercelAI",
      "Amqplib",
      "Anthropic_AI",
      "Aws",
      "Express",
      "Firebase",
      "GenericPool",
      "Google_GenAI",
      "Hapi",
      "Kafka",
      "Koa",
      "LangChain",
      "LangGraph",
      "LruMemoizer",
      "Mongo",
      "Mongoose",
      "Mysql",
      "Mysql2",
      "OpenAI",
      "Postgres",
      "PostgresJs",
      "Tedious",
      "ContextLines",
      "NormalizePaths",
      "GlobalHandlers",
    ],
    name: "sentry.javascript.deno",
    packages: [
      {
        name: "denoland:sentry",
        version: "{{version}}",
      },
    ],
    version: "{{version}}",
  },
  server_name: "{{server}}",
  timestamp: 0,
}
`;

snapshot[`captureMessage twice 1`] = `
{
  breadcrumbs: [
    {
      category: "sentry.event",
      event_id: "{{id}}",
      level: "error",
      message: "Error: Some unhandled error",
      timestamp: 0,
    },
    {
      category: "sentry.event",
      event_id: "{{id}}",
      level: "info",
      message: "Some error message",
      timestamp: 0,
    },
  ],
  contexts: {
    app: {
      app_start_time: "{{time}}",
    },
    device: {
      arch: "{{arch}}",
      processor_count: 0,
    },
    os: {
      name: "{{platform}}",
      version: "{{version}}",
    },
    runtime: {
      name: "deno",
      version: "{{version}}",
    },
    trace: {
      span_id: "{{id}}",
      trace_id: "{{id}}",
    },
    typescript: {
      name: "TypeScript",
      version: "{{version}}",
    },
    v8: {
      name: "v8",
      version: "{{version}}",
    },
  },
  environment: "production",
  event_id: "{{id}}",
  level: "info",
  message: "Some error message",
  platform: "javascript",
  sdk: {
    integrations: [
      "EventFilters",
      "RequestData",
      "FunctionToString",
      "LinkedErrors",
      "Dedupe",
      "Breadcrumbs",
      "DenoContext",
      "DenoServe",
      "DenoHttp",
      "DenoRedis",
      "Graphql",
      "VercelAI",
      "Amqplib",
      "Anthropic_AI",
      "Aws",
      "Express",
      "Firebase",
      "GenericPool",
      "Google_GenAI",
      "Hapi",
      "Kafka",
      "Koa",
      "LangChain",
      "LangGraph",
      "LruMemoizer",
      "Mongo",
      "Mongoose",
      "Mysql",
      "Mysql2",
      "OpenAI",
      "Postgres",
      "PostgresJs",
      "Tedious",
      "ContextLines",
      "NormalizePaths",
      "GlobalHandlers",
    ],
    name: "sentry.javascript.deno",
    packages: [
      {
        name: "denoland:sentry",
        version: "{{version}}",
      },
    ],
    version: "{{version}}",
  },
  server_name: "{{server}}",
  timestamp: 0,
}
`;

snapshot[`captureMessage twice 2`] = `
{
  breadcrumbs: [
    {
      category: "sentry.event",
      event_id: "{{id}}",
      level: "error",
      message: "Error: Some unhandled error",
      timestamp: 0,
    },
    {
      category: "sentry.event",
      event_id: "{{id}}",
      level: "info",
      message: "Some error message",
      timestamp: 0,
    },
    {
      category: "sentry.event",
      event_id: "{{id}}",
      level: "info",
      message: "Some error message",
      timestamp: 0,
    },
  ],
  contexts: {
    app: {
      app_start_time: "{{time}}",
    },
    device: {
      arch: "{{arch}}",
      processor_count: 0,
    },
    os: {
      name: "{{platform}}",
      version: "{{version}}",
    },
    runtime: {
      name: "deno",
      version: "{{version}}",
    },
    trace: {
      span_id: "{{id}}",
      trace_id: "{{id}}",
    },
    typescript: {
      name: "TypeScript",
      version: "{{version}}",
    },
    v8: {
      name: "v8",
      version: "{{version}}",
    },
  },
  environment: "production",
  event_id: "{{id}}",
  level: "info",
  message: "Another error message",
  platform: "javascript",
  sdk: {
    integrations: [
      "EventFilters",
      "RequestData",
      "FunctionToString",
      "LinkedErrors",
      "Dedupe",
      "Breadcrumbs",
      "DenoContext",
      "DenoServe",
      "DenoHttp",
      "DenoRedis",
      "Graphql",
      "VercelAI",
      "Amqplib",
      "Anthropic_AI",
      "Aws",
      "Express",
      "Firebase",
      "GenericPool",
      "Google_GenAI",
      "Hapi",
      "Kafka",
      "Koa",
      "LangChain",
      "LangGraph",
      "LruMemoizer",
      "Mongo",
      "Mongoose",
      "Mysql",
      "Mysql2",
      "OpenAI",
      "Postgres",
      "PostgresJs",
      "Tedious",
      "ContextLines",
      "NormalizePaths",
      "GlobalHandlers",
    ],
    name: "sentry.javascript.deno",
    packages: [
      {
        name: "denoland:sentry",
        version: "{{version}}",
      },
    ],
    version: "{{version}}",
  },
  server_name: "{{server}}",
  timestamp: 0,
}
`;
